samples/_failures_safe/1761393125_1b8c1f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9bbf9136.c: In function ‘main’:
./samples/SAFE/__tmp_9bbf9136.c:174:5: error: expected expression at end of input
  174 |     if (len >
      |     ^~
./samples/SAFE/__tmp_9bbf9136.c:174:5: error: expected declaration or statement at end of input
